bc_minisat_all v1.1.0 Released Sep. 30th 2015
========================================
* Supported solution counting with GMP library.
* Supported interruption signal handling and deleted timelimit-related functionality instead.
* Changed names of some macros.
* Added functionality for continuing search by simulating the previous decisions after backtracking to the root level.

bc_minisat_all v1.0.0 Released Jul. 27th 2015
========================================
* Generalization is now renamed to simplification, and several bugs are fixed in the simplification part.
* Furthermore, the following change was made:
** The former part of simplification is implemented by traversing implication graph, which is more efficient than scanning the whole CNF.
** The latter part is organized and some bugs are corrected.
* Added functionality for setting timelimit and periodically reporting progress.
* Added functionality for including GNU MP bignum library so that a huge number of solutions can be precisely counted.
* Fixed the bug of not handling the case that blocking clases happen to be empty in solver_search().
* Deleted solver_generalize_naive() because it is useless.

minisat_all v2.0.1 Released Jun. 23rd 2015
========================================
* Added a license description (LICENSE.minisat_all).

minisat_all v2.0.0 Released April 30th 2015
========================================
* Fixed the bug of inserting a problem line by wrongly calling fseek in solver_solve().
**  Problem line is no longer inserted.
* Improved a blocking clause computation according to the following paper:
**  Y. Yu, P. Subramanyan, N. Tsiskaridze, S. Malik: "All-SAT using Minimal Blocking Clauses", in Proc. of the 27th International Conference on VLSI Design and the 13th International Conference on Embedded Systems, pp.86-91, 2014.

minisat_all v1.0.0 Released April 16th 2015
========================================
* This software computes the following problem , which is called ALLSAT.