@@ -973,6 +973,7 @@ static lbool solver_search(solver* s, int nof_conflicts, int nof_learnts)
     veci_new(&learnt_clause);
 
     for (;;){
+		if (eflag == 1) return l_False;
         clause* confl = solver_propagate(s);
         if (confl != 0){
             // CONFLICT
